fail_crate/tests/duplicate_optional.stderr
error: `optional` specified more than once in field `#[new(...)]`.
 --> fail_crate/tests/duplicate_optional.rs:5:21
  |
5 |     #[new(optional, optional)]
  |                     ^^^^^^^^
