fail_crate/tests/duplicate_optional.rs
use inew::New;

#[derive(New)]
struct A {
    #[new(optional, optional)]
    x: u32,
}

fn main() {}
